tests/specs/run/error_cause_recursive/error_cause_recursive.ts.out
error: Uncaught (in promise) Error: bar <ref *1>
const y = new Error("bar", { cause: x });
          ^
    at file:///[WILDCARD]/error_cause_recursive.ts:2:11
Caused by: Error: foo
    at file:///[WILDCARD]/error_cause_recursive.ts:1:11
Caused by: [Circular *1]
