tests/specs/run/error_cause_recursive/error_cause_recursive.ts
const x = new Error("foo");
const y = new Error("bar", { cause: x });
x.cause = y;
throw y;
